feat: 1、升级Java版本至21，升级框架版本。2、移除MagicAPI，目前该项目与当前版本的SpringBoot不太兼容。